static/less/pages.less
/*
* pages.less
*
* Here we define less/css for the main section of pages.
*
*/

.main-header {
  width: 100%;
  height: 75px;
  margin-bottom: 35px;
  border: 0px;

  >.row {
    height: 100%;
  }

  div.label {
    display: table;
    height: 100%;

    .icon {
      background-image: @iconsFile;
      text-indent: -4000px;
    }

    span {
      display: table-cell;
      vertical-align: middle;
      text-align: center;
    }
  }
  div.amount {
    .sl-md-sb;
  }

  div.title {
    height: 100%;

    span {
      // vertically center the text
      display: block;
      line-height: 75px;

      // hide long lines with an ellipsis
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
    }
  }

  div.buttons {
    height: 100%;
    margin-top: 28px;

    .buttons-container {
      height: 100%;
      float: right;
      a {
        margin-right: 7px;
        cursor: pointer;

        &:last-of-type {
          margin-right: 14px;
        }
      }

      .modal-container {
        display: inline-block;
        overflow: visible;
      }
    }
  }
}

//  each section of information should look like
//  <section class="thisthing-info">...</section>
section[class$="-info"] {
  margin-bottom: 4em;

  header {
    border-bottom: 1px solid #bcbcbc;
    h3 {
      margin-bottom: 5px;
      line-height: 1em;
      .modal-container {
        display: initial;
      }
    }
    margin-bottom: 10px;
    .add {
      float: right;
    }
  }
}

@itemIconBackground: @gray4;
@itemBackground: @gray2;

.span11 + .span8 {
  section[class$="-info"] {
    float: left;
    width: 100%;
  }
}

.sidebar-items {
  li {
    background-color: @itemBackground;
    margin-bottom: 5px;
    clear: both;
    width: 100%;
    position: relative;

    a, a:visited, a:hover {
      color: @gray5;
    }
  }
  .icon {
    background-color: @itemIconBackground;
    width: 60px;
    height: 60px;
    display: block;
    float: left;
    background-image: @iconsFile;
    text-indent: -4000px;
  }
  .details {
    margin-left: 60px;
    padding: 10px;
    height: 60px;

    .name {
      display: block;
    }
  }
  .actions {
    background-color: @itemIconBackground;
    clear: both;
    text-align: right;
    padding: 5px;
    color: @white;
    font-style: italic;
  }
}

.bank-account-info {
  .icon {
    background-position: -123px -300px;
  }

  .icon-verified {
    background-position: -63px -300px;
  }
}

.card-info {
  .icon {
    background-position: -60px -360px;
  }
}

